frontend/sass/uswds/styles.scss
@forward "uswds-theme";
@forward "uswds";
@forward "uswds-theme-custom-styles";
@forward "uswds-utilities";

html {
    scroll-behavior: smooth;
}

// COLORS
:root {
    --base-light-variant: #f5f5f5;
    --primary-light: #bcd9ed;
    --primary: #336a90;
    --primary-dark: #264a64;
    --secondary-lighter: #fef5e4;
    --secondary-light: #f6f3ee;
    --secondary: #cfc3ae;
    --secondary-dark: #2d261a;
    --neutral-lightest: #f0f0f0;
    --neutral-lighter: #a9aeb1;
    --neutral-light: #6b6e70;
    --neutral: #71767a;
    --neutral-dark: #1c1c1c;
    --feedback-info-light: #e7f6f8;
    --feedback-info: #009ec1;
    --feedback-info-dark: #2e6276;
    --feedback-error-light: #f4e3db;
    --feedback-error: #b50909;
    --feedback-error-dark: #6f3331;
    --feedback-warning-light: #faf3d1;
    --feedback-warning: #e5a000;
    --feedback-warning-dark: #936f38;
    --feedback-success-light: #ecf3ec;
    --feedback-success: #4d8055;
    --feedback-success-dark: #446443;
    --feedback-disabled-light: #e6e6e6;
    --feedback-disabled: #c9c9c9;
    --feedback-disabled-dark: #adadad;
    --data-viz-primary-1: #754295;
    --data-viz-primary-2: #90be6d;
    --data-viz-primary-3: #d67625;
    --data-viz-primary-4: #264a64;
    --data-viz-primary-5: #c07b96;
    --data-viz-primary-6: #3a835b;
    --data-viz-primary-7: #6f3331;
    --data-viz-primary-8: #e5a000;
    --data-viz-primary-9: #b50909;
    --data-viz-primary-10: #a1d0be;
    --data-viz-primary-11: #336a90;
    --data-viz-secondary-20: #534c9c;
    --data-viz-secondary-23: #8b4687;
    --data-viz-secondary-26: #b6406c;
    --data-viz-secondary-58: #80a858;
    --data-viz-bl-by-fy-1: #a5174c;
    --data-viz-bl-by-fy-2: #c94576;
    --data-viz-bl-by-fy-3: #eb6a94;
    --data-viz-bl-by-fy-4: #f492bd;
    --data-viz-bl-by-fy-5: #d393b3;
    --data-viz-bl-by-status-1: #a9aeb1;
    --data-viz-bl-by-status-2: #336a90;
    --data-viz-bl-by-status-3: #e5a000;
    --data-viz-bl-by-status-4: #8b4687;
    --data-viz-budget-graph-1: #3a835b;
    --data-viz-budget-graph-2: #a6deb5;
    --can-total-budget-2: #1f468e;
    --can-budget-by-fy-graph-1: #163b23;
    --can-budget-by-fy-graph-2: #377453;
    --can-budget-by-fy-graph-3: #3db27d;
    --can-budget-by-fy-graph-4: #67d37f;
    --can-budget-by-fy-graph-5: #a1d0be;
    --portfolio-carry-forward: #ba99c6;
    --portfolio-new-funding: #4c2a5c;
    --portfolio-budget-graph-1: #123373;
    --portfolio-budget-graph-2: #24589d;
    --portfolio-budget-graph-3: #0050d8;
    --portfolio-budget-graph-4: #748fba;
    --portfolio-budget-graph-5: #79b1e5;
    --release-changes-fixes: #6cd4ff;
}

$themeColors: (
    "base-light-variant": var(--base-light-variant),
    "primary-light": var(--primary-light),
    "primary": var(--primary),
    "primary-dark": var(--primary-dark),
    "secondary-lighter": var(--secondary-lighter),
    "secondary-light": var(--secondary-light),
    "secondary": var(--secondary),
    "secondary-dark": var(--secondary-dark),
    "neutral-lightest": var(--neutral-lightest),
    "neutral-lighter": var(--neutral-lighter),
    "neutral-light": var(--neutral-light),
    "neutral": var(--neutral),
    "neutral-warm": var(--neutral-warm),
    "feedback-info-light": var(--feedback-info-light),
    "feedback-info": var(--feedback-info),
    "feedback-info-dark": var(--feedback-info-dark),
    "feedback-error-light": var(--feedback-error-light),
    "feedback-error": var(--feedback-error),
    "feedback-error-dark": var(--feedback-error-dark),
    "feedback-warning-light": var(--feedback-warning-light),
    "feedback-warning": var(--feedback-warning),
    "feedback-warning-dark": var(--feedback-warning-dark),
    "feedback-success-light": var(--feedback-success-light),
    "feedback-success": var(--feedback-success),
    "feedback-success-dark": var(--feedback-success-dark),
    "feedback-disabled-light": var(--feedback-disabled-light),
    "feedback-disabled": var(--feedback-disabled),
    "feedback-disabled-dark": var(--feedback-disabled-dark),
    "data-viz-primary-1": var(--data-viz-primary-1),
    "data-viz-primary-2": var(--data-viz-primary-2),
    "data-viz-primary-3": var(--data-viz-primary-3),
    "data-viz-primary-4": var(--data-viz-primary-4),
    "data-viz-primary-5": var(--data-viz-primary-5),
    "data-viz-primary-6": var(--data-viz-primary-6),
    "data-viz-primary-7": var(--data-viz-primary-7),
    "data-viz-primary-8": var(--data-viz-primary-8),
    "data-viz-primary-9": var(--data-viz-primary-9),
    "data-viz-primary-10": var(--data-viz-primary-10),
    "data-viz-primary-11": var(--data-viz-primary-11),
    "data-viz-secondary-20": var(--data-viz-secondary-20),
    "data-viz-secondary-23": var(--data-viz-secondary-23),
    "data-viz-secondary-26": var(--data-viz-secondary-26),
    "data-viz-secondary-58": var(--data-viz-secondary-58),
    "data-viz-bl-by-fy-1": var(--data-viz-bl-by-fy-1),
    "data-viz-bl-by-fy-2": var(--data-viz-bl-by-fy-2),
    "data-viz-bl-by-fy-3": var(--data-viz-bl-by-fy-3),
    "data-viz-bl-by-fy-4": var(--data-viz-bl-by-fy-4),
    "data-viz-bl-by-fy-5": var(--data-viz-bl-by-fy-5),
    "data-viz-bl-by-status-1": var(--data-viz-bl-by-status-1),
    "data-viz-bl-by-status-2": var(--data-viz-bl-by-status-2),
    "data-viz-bl-by-status-3": var(--data-viz-bl-by-status-3),
    "data-viz-bl-by-status-4": var(--data-viz-bl-by-status-4),
    "data-viz-budget-graph-1": var(--data-viz-budget-graph-1),
    "data-viz-budget-graph-2": var(--data-viz-budget-graph-2),
    "can-total-budget-2": var(--can-total-budget-2),
    "can-budget-by-fy-graph-1": var(--can-budget-by-fy-graph-1),
    "can-budget-by-fy-graph-2": var(--can-budget-by-fy-graph-2),
    "can-budget-by-fy-graph-3": var(--can-budget-by-fy-graph-3),
    "can-budget-by-fy-graph-4": var(--can-budget-by-fy-graph-4),
    "can-budget-by-fy-graph-5": var(--can-budget-by-fy-graph-5),
    "portfolio-carry-forward": var(--portfolio-carry-forward),
    "portfolio-new-funding": var(--portfolio-new-funding),
    "portfolio-budget-graph-1": var(--portfolio-budget-graph-1),
    "portfolio-budget-graph-2": var(--portfolio-budget-graph-2),
    "portfolio-budget-graph-3": var(--portfolio-budget-graph-3),
    "portfolio-budget-graph-4": var(--portfolio-budget-graph-4),
    "portfolio-budget-graph-5": var(--portfolio-budget-graph-5),
    "release-changes-fixes": var(--release-changes-fixes)
);

@each $name, $color in $themeColors {
    .bg-brand-#{$name} {
        background-color: $color !important;
    }
    .text-brand-#{$name} {
        color: $color !important;
    }
}

//FONTS
.font-12px {
    font-size: 0.75rem;
}

.font-20px {
    font-size: 1.25rem;
}

.font-32px {
    font-size: 2rem;
}
.fake-bold {
    text-shadow: 0 0 0.025rem;
}

// HELPERS
.width-fit-content {
    width: fit-content;
}

.flex-justify-space-between {
    justify-content: space-between;
}

// Force scrollbars on MacOS with this class, force-show-scrollbars
// based on https://gist.github.com/pjobson/c45f9c3dfa4b7fc3f30f0de29d1beaa1
// but without the JS for hover/transition effects
// There is simpler global option here: https://simurai.com/blog/2011/07/26/webkit-scrollbar
.force-show-scrollbars::-webkit-scrollbar-track:vertical {
    border-left: 1px solid #e7e7e7;
    box-shadow:
        1px 0 1px 0 #f6f6f6 inset,
        -1px 0 1px 0 #f6f6f6 inset;
}

.force-show-scrollbars::-webkit-scrollbar-track:horizontal {
    border-top: 1px solid #e7e7e7;
    box-shadow:
        0 1px 1px 0 #f6f6f6 inset,
        0 -1px 1px 0 #f6f6f6 inset;
}

.force-show-scrollbars::-webkit-scrollbar {
    -webkit-appearance: none;
    background-color: #fafafa;
    width: 16px;
}

.force-show-scrollbars::-webkit-scrollbar-thumb {
    background-clip: padding-box;
    background-color: #c1c1c1;
    border-color: transparent;
    border-radius: 9px 8px 8px 9px;
    border-style: solid;
    border-width: 3px 3px 3px 4px; /* Workaround because margins aren't supported */
    box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
}

.force-show-scrollbars::-webkit-scrollbar-thumb:hover {
    background-color: rgba(0, 0, 0, 0.5);
}

// DATE PICKER
[class^="usa-date-picker__"]:not([disabled]) {
    text-align: center;
}

// BUTTONS
button {
    background: none;
    border: none;
    text-align: center;
    padding: 0;
}

// TABLES
.usa-table thead th[aria-sort] {
    background-color: transparent;
}

.usa-table thead th[aria-sort] button {
    font-weight: 600;
}

